2020-09-29  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid] Implement reversible floating zoom.

	The floating zoom is neccessary to display extremely large sizes
	after scaling them down, but it has to stay rounded to integers when
	displaying grids and bitmaps for small sizes. All this can be
	achievied by truncating and bit-adjusting numbers in IEEE 754 format.
	To make it portable too, we rely on C99 `frexpf' and `ldexpf'.

	* src/ftgid.c (status): Change type of `scale'.
	(ZOOM, grid_status_init, grid_status_rescale,
	grid_status_draw_{grid,outline}): Updated accordingly.
	(event_grid_zoom): Implement truncated reversible zoom.

2020-09-28  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftgrid.c (ZOOM, *): Macro to zoom metrics.

2020-09-28  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftgrid.c (grid_status_rescale): Move and rename.

2020-09-17  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Introduce 64th format for displaying values.

	* src/ttdebug.c (FORMAT_INTEGER, FORMAT_FLOAT, FORMAT_64TH): New
	enum values.
	(use_float): Global variable replaced by...
	(num_format): ... this one.  Update all caller.
	(print_number): New function.
	(display_changed_points, show_points_table): Use it.
	(RunIns) <'h'>: Update help screen.
	(RunIns) <'F'>: Replace toggling by cycling.
	(RunIns) <'V'>, <'G'>, <'C'>, <'S'>, <'K'>: Updated.

2020-09-17  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftbench] Permit reverse order of indices.

	Some compressed streams are really bad in rewinding.

	* src/ftbench.c (FOREACH): General loop in either direction.
	(test_*): Use it.
	(main): Parse forward and reverse index ranges.
	(usage): Document it.
	* man/ftbench.1: Ditto.

2020-09-16  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/*: Fix some -Wformat-signedness warnings.

2020-09-12  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftgrid.c (grid_status_rescale_initial): Deal with low ascender.

2020-08-26  Alexei Podtelezhnikov  <apodtele@gmail.com>
